Update GitHub and LinkedIn usernames

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -10,7 +10,7 @@
 email: abbas.muzammil2399@gmail.com # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
-github_username: epicabbas
+github_username: abbas2399
 # gitlab_username: # your GitLab user name
 # ieee_id: # your ieeexplore.ieee.org/author/id
 #inspirehep_id: 1010907 # Inspire HEP author ID
@@ -20,7 +20,7 @@ github_username: epicabbas
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: abbas-hussain-muzammil
+linkedin_username: abbas2399
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 medium_username: abbashussain2399.medium.com/the-role-of-dns-2ab034dfba05
 # orcid_id: # your ORCID ID
